[tool.poetry]
name = "robot-launch-sim"
version = "0.1.0"
description = ""
authors = ["thebeastjk <therobobeastjk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyqt6-tools = "^6.4.2.3.3"
python-dotenv = "^1.0.0"
pandas = "^2.1.4"
openpyxl = "^3.1.2"
streamlit = "^1.30.0"
plotly = "^5.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
