[project]
name = "robot-launch-sim"
version = "0.1.0"
description = ""
authors = [{name = "thebeastjk", email = "<therobobeastjk@gmail.com>"}]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies =  ["pandas >=2.1.4",
"streamlit>=1.30.0",
"plotly>=5.18.0"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
